# timeline_plugin_documents

./: .gitignore  MIGRATION.md  README.md  config.toml.example  flake.nix
client/: Cargo.toml  index.html
client/src/: lib.rs  main.rs
server/: Cargo.toml  index.html
server/js/: pdfGen.js
server/src/: files.rs  lib.rs  main.rs  pdf.rs
