[package]
name = "timeline_plugin_documents_client"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "timeline_plugin_documents_client"
path = "src/main.rs"

[dependencies]
timeline_plugin_client_sdk = { path = "../../../timeline_plugin_client_sdk" }

leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlDivElement", "Window"] }

[profile.release]
lto = true
opt-level = "z"
