[package]
name = "timeline_plugin_documents_server"
version = "0.2.0"
edition = "2021"

[lib]
name = "timeline_plugin_documents_server"
path = "src/lib.rs"

[[bin]]
name = "timeline_plugin_documents_server"
path = "src/main.rs"

[dependencies]
timeline_plugin_sdk = { path = "../../../timeline_plugin_sdk" }

rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

image = "0.25"
pdfium-render = { version = "0.8", features = ["sync", "thread_safe"] }
rayon = "1"
futures = "0.3"

rsa = { version = "0.9", features = ["sha2", "pem", "serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
