[package]
name = "timeline_plugin_documents_server"
version = "0.2.0"
edition = "2021"

[lib]
name = "timeline_plugin_documents_server"
path = "src/lib.rs"

[[bin]]
name = "timeline_plugin_documents_server"
path = "src/main.rs"

[dependencies]
timeline_plugin_sdk = { path = "../../../timeline_plugin_sdk" }

rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

image = "0.25"
# Pin the FPDF API bindings to a pdfium build ≤ what distros ship (nixpkgs
# ships 7363). The default `pdfium_latest` (7543) expects symbols missing from
# older libs, so binding fails at load; 7350 bindings work against any pdfium
# >= 7350 (the lib is a superset). default-features=false drops pdfium_latest.
pdfium-render = { version = "0.8", default-features = false, features = ["pdfium_7350", "sync", "thread_safe", "image"] }
rayon = "1"
futures = "0.3"

rsa = { version = "0.9", features = ["sha2", "pem", "serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
